--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.3.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@types/firebase": "^3.2.1",
     "@types/node": "20.8.6",
     "bcrypt": "^5.1.1",
