--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.4",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "5.2.2"
   },
   "devDependencies": {
