--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@firebase/firestore": "^4.3.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.4",
     "@types/firebase": "^3.2.1",
     "@types/node": "20.8.6",
     "bcrypt": "^5.1.1",
@@ -25,8 +26,10 @@
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slideshow-image": "^4.3.0",
     "swr": "^2.2.4",
     "tailwindcss-animated": "^1.0.1",
+    "tw-elements": "^1.0.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^4.4.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
