--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.5",
-    "firebase": "^10.5.0",
+    "firebase": "^10.7.0",
+    "flowbite": "^2.2.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slideshow-image": "^4.3.0",
+    "sharp": "^0.33.0",
     "swr": "^2.2.4",
     "tailwindcss-animated": "^1.0.1",
     "tw-elements": "^1.0.0",
