masih di Carousel success

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-slideshow-image": "^4.3.0",
     "sharp": "^0.33.0",
     "swr": "^2.2.4",
